# LLMAgentApi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: chats.txt  emails.txt
docker/: Dockerfile
src/llm_agent_api/: .env.sample  app.py  prepare_data.ipynb  start_fastapi_server.sh
src/llm_agent_api/apihelper/: constants.py  logger.py  parsers.py  pipelines.py  settings.py
tests/: test_main.py
