[tool.poetry]
name = "llmagentapi"
version = "0.1.0"
description = ""
authors = ["Dragos Toma <dragos.toma@repsmate.com>"]
readme = "README.md"
packages = [ { include = "llm_agent_api", from = "src" } ]


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
